corrects OpenAPI annotations for artifact, config-file and asset-version endpoints
